# jessies

./: .gitignore  CygwinProblems.md  CygwinSetup.md  Downloads.md  Evergreen.md  Makefile  ProjectHome.md  README.md  SCM.md  SalmaHayek.md  Terminator.md  TerminatorFAQ.md
KnowAll/: Makefile  README  TODO  knowall
blindvnc/: TODO  blindvnc  svn-commit.tmp
evergreen/: README  README.md  TODO  TODO.phil
lwm/: .gitignore  ChangeLog  Imakefile  README.md  TODO  changedist.sh  client.c  cursor.c  ewmh.c  ewmh.h  inst.sh  lwm.c  manage.c  mkdist.sh  no_xmkmf_makefile  resource.c
x11-extras/: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README-gummiband.md  README-window.md  README.md  clock.cpp  example-speckeysd-keys  gummiband.cpp  gummiband.man  gummiband.testXresources  lock.cpp  log.h  menu.cpp  speckeysd.cpp  window.cpp  wselect.cpp  x11-reaper.cpp
x11-extras/clock/: Imakefile  Makefile  clock.c  clock.cpp  clock.h  disp.c  error.c  resource.c
x11-extras/lock/: CHANGES  COPYRIGHT  Imakefile  Makefile  README  README.md  disp.c  error.c  lock.c  lock.h  password.c  resource.c
x11-extras/menu/: Imakefile  Makefile  README  README.md  disp.c  error.c  example.menu  menu.c  menu.cpp  menu.h  resource.c
x11-extras/native/all/speckeysd/: speckeysd.cpp
x11-extras/speckeysd/: AUTHORS  CHANGES  Imakefile  Makefile  README  README.md  speckeysd.c
x11-extras/terminator/: Imakefile  terminator.c
x11-extras/window/: .gitignore  Imakefile  Makefile  README.md  window.c  wselect.c  wselect.cpp
x11-extras/www/: index.html
x11-extras/x11-reaper/: Makefile
(+1320 files in other folders)
